# swg-scripts

./: .gitmodules  cve.py  release.py  requirements.txt  scan.py
alert/: template.md
cvelate/: Cargo.toml  cvelate-example.yaml
cvelate/src/: advisory.rs  auth.rs  cli.yaml  cve.rs  git.rs  github.rs  main.rs  report.rs  rnotes.rs  zepsec.rs
ghsa/: Cargo.toml  README.md  ghsa.py
ghsa/src/: main.rs
report-utils/: release-meeting.service  release-meeting.timer  release-report.sh
zepsec/: __init__.py
